<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="369dp"
        android:layout_height="84dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="1dp"
        tools:layout_editor_absoluteY="426dp" />

    <ImageView
        android:id="@+id/imgCharacter"
        android:layout_width="65dp"
        android:layout_height="72dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintRight_toRightOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        android:src="@drawable/questionmark" />

    <TextView
        android:id="@+id/txtPlayer"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/txtRound"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@+id/txtPlayer"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.545" />

    <Button
        android:id="@+id/btnNextRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Next round"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toRightOf="@+id/txtRound"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />
</android.support.constraint.ConstraintLayout>